fixed bugs on mobile screens #4

--- a/css/dev.css
+++ b/css/dev.css
@@ -60,7 +60,7 @@ body {
     width: 100%;
   }
 }
-#app input {
+#app input, #app textarea, #app button {
   -webkit-appearance: none !important;
 }
 #app #topBlock {
